Shift things up so there's no scrollbar for new account. Move the logo to prevent inline-overflow of tools on narrow displays.

--- a/source/chrome/content/about/css/screen.css
+++ b/source/chrome/content/about/css/screen.css
@@ -31,7 +31,7 @@ a:hover {color: #9f423b; text-decoration: none;}
 html {
     height: 80% !important;
     padding-bottom: 0px; 
-    padding-top: 20px;
+    padding-top: 15px;
     padding-left: 0px;
     padding-right: 0px;
 }
@@ -61,7 +61,12 @@ body {
     font-size: 10px;
     color: rgba(0, 0, 0, 0.4);
 }
-.logo {float: left;}
+.logo {
+    bottom: 0;
+    left: 20px;
+    opacity: .7;
+    position: absolute;
+}
 
 #top-menu {
     display: inline;
@@ -82,6 +87,7 @@ body {
         rgba(0, 0, 0, 0.3) 0px 4px 4px;
     background-color: rgba(0, 0, 0, 0.6);
     cursor: pointer;
+    z-index: 2;
 }
 #top-menu > li.top-menu-open {
     padding-bottom: 4px;
@@ -127,11 +133,11 @@ body {
 }
 
 #container {
+    background: transparent url(../images/bg_clouds.png) no-repeat center 100px;
     position: relative;
-    top: -60px;
+    top: -125px;
     margin: 0px auto;
     text-align: center;
-    background: transparent url('../images/bg_clouds.png') no-repeat center center;
     height: 300px;
 }
 
@@ -167,11 +173,11 @@ body {
 }
 
 #status {
+    padding-bottom: 50px;
     width: 180px;
     vertical-align: bottom;
     font-family: 'DroidSans';
     font-size: 12px;
-    padding: 0px 12px 40px;
     color: black;
 }
 
@@ -224,8 +230,8 @@ body {
 
 #bubble {
     display: inline-block;
+    margin: -20px auto 0;
     width: 850px;
-    margin: 0px auto;
     text-align: center;
 }
 
